--- a/templates/transcribe.html
+++ b/templates/transcribe.html
@@ -41,7 +41,7 @@
         data: { url_give: url }, // 데이터를 주는 방법
         success: function (response) { // 성공하면
           if (response['result'] == 'success') {
-            alert("가져왔습니다");
+            // alert("가져왔습니다");
 
             let articles = response['articles']
 
