--- a/templates/transcribe2.html
+++ b/templates/transcribe2.html
@@ -39,25 +39,25 @@
       let now_art = $('#article_' + a)
       let then = $('#input_' + (a + 1))
 
-      let tmp_art =""
+      let tmp_art = ""
       let atxt = now_art.text()
       console.log("ori art", atxt)
       let itxt = now.val()
       console.log("input", itxt)
       console.log(atxt[0], atxt[1], atxt[2])
-      for(let i=0 ; i < itxt.length ; i++ ){
+      for (let i = 0; i < itxt.length; i++) {
         console.log(i)
-        if( atxt[i] != itxt[i] ){
+        if (atxt[i] != itxt[i]) {
           console.log("letter", atxt[i])
-          tmp_art += ' <span style="color:red;">' + atxt[i] + '</span>'
-          //' <span style="color:red;">' + atxt + '</span>'
-        } else{
+          tmp_art += '<span style="color:blue;">' + atxt[i] + '</span>'
+          //' <span style="color:blue;">' + atxt + '</span>'
+        } else {
           tmp_art += atxt[i]
         }
 
       }
-      tmp_art += atxt.slice(itxt.length,atxt.length)
-    
+      tmp_art += atxt.slice(itxt.length, atxt.length)
+
       console.log("article", tmp_art)
       $(now_art).html(tmp_art);
 
@@ -85,7 +85,6 @@
         data: { url_give: this_url }, // 데이터를 주는 방법
         success: function (response) { // 성공하면
           if (response['result'] == 'success') {
-            alert("가져왔습니다");
 
             let articles = response['articles']
 
@@ -101,14 +100,14 @@
               let sentence = article[i]
 
               let tmp = '<div>\
-              <h5 id="article_'+ i + '">' + sentence + ' </h5>\
-              <input type="text" style="height:50px;" class="form-control" name="title" id="input_'+ i + '" placeholder="" \
+              <text id="article_'+ i + '" style="font-size:15pt">' + sentence + ' </text>\
+              <input type="text" style="height:50px; font-size:15pt" class="form-control" name="title" id="input_'+ i + '" placeholder="" \
               onkeydown="nextFocus( ' + (i) + ')">\
               </div> <br> <br>'
               $('#bonmoon').append(tmp);
             }
 
-            let temp = '<a href="' + url + '">기사원문보기</a>\
+            let temp = '<a href="' + url + '" target="_blank"> 기사원문보기 </a>\
             <h3 style="text-align: center; margin-top: 30px;" id="title">'+ title + '</h3>'
             $('#title').append(temp);
           }
@@ -125,6 +124,7 @@
 
   </script>
   <style>
+
     * {
       /* width: 900px; */
       margin: 10px 10px 0px 10px;
@@ -144,9 +144,9 @@
     }
 
     .all {
-      width: 1300px;
+      width: auto;
       display: block;
-      margin: 80px auto;
+      margin: 80px 100px;
     }
   </style>
 
