--- a/templates/write_ing.html
+++ b/templates/write_ing.html
@@ -53,7 +53,7 @@
                     }, // data를 작성합니다. 
                     success: function (response) {
                         if (response['result'] == 'success') {
-                            alert(response['msg']);
+                            // alert(response['msg']);
                             location.href = "write";
                             console.log("여기까진 됨")
                         }
